# RLE

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/rules/: architecture.md  code-style.md  llm-providers.md  rimapi.md
.claude/skills/benchmark/: SKILL.md
.claude/skills/live/: SKILL.md
.claude/skills/status/: SKILL.md
.claude/skills/test/: SKILL.md
.github/workflows/: benchmark.yml  ci.yml
docker/: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
docs/adr/: 001-colony-bootstrap-strategy.md  002-map-analyst-agent.md  003-automated-benchmark-infrastructure.md
saves/: README.md
scripts/: compare_benchmarks.py  create_scenario_saves.py  run_benchmark.py  run_scenario.py  serve_dashboard.py  visualize_results.py
src/rle/: __init__.py  config.py  docker.py
src/rle/agents/: __init__.py  actions.py  base_role.py  construction_planner.py  defense_commander.py  json_repair.py  map_analyst.py  medical_officer.py  research_director.py  resource_manager.py  social_overseer.py
src/rle/orchestration/: __init__.py  action_executor.py  action_resolver.py  game_loop.py  state_manager.py
src/rle/rimapi/: __init__.py  api_catalog.py  client.py  schemas.py  sse_client.py
src/rle/scenarios/: __init__.py  evaluator.py  loader.py  schema.py
src/rle/scenarios/definitions/: 01_crashlanded_survival.yaml  02_first_winter.yaml  03_toxic_fallout.yaml  04_raid_defense.yaml  05_plague_response.yaml  06_ship_launch.yaml
src/rle/scoring/: __init__.py  bootstrap.py  composite.py  delta.py  metrics.py  recorder.py
src/rle/tracking/: __init__.py  cost_tracker.py  event_log.py  hf_logger.py  history.py  leaderboard.py  metadata.py  wandb_logger.py
tests/: conftest.py
tests/integration/: test_game_loop.py  test_scenario_run.py
tests/unit/: test_action_executor.py  test_action_resolver.py  test_base_role.py  test_bootstrap.py  test_composite_scorer.py  test_cost_tracker.py  test_json_repair.py  test_leaderboard.py  test_metrics.py  test_rimapi_client.py  test_role_agents.py  test_scenario_evaluator.py  test_scenario_loader.py  test_schemas.py  test_sse_client.py  test_state_manager.py  test_visualizer_integration.py
